/**
 * RPC interface definition between Parser microservice and DB interface microservice
 */
syntax = "proto3";
package dbrpc;

/**
 * Service for managing secrets such as passwords or tokens.
 */
service Records {
    /// Stores a record.
    rpc Store(StoreRequest) returns (StoreResponse) {}
    /// Updates a record
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
}

/**
 * Store a record.
 */
message StoreRequest {
    Record record = 1; /// The key to store the secret against.
}

/**
 * Response to a store record request.
 */
message StoreResponse {
}

/**
 * Represents a Record structure with all its necessary information.
 */
message Record{
    string ID                = 1; /// ID of the record.
    string Name              = 2; /// Name of the person
    string Email             = 3; /// Email of the person
    string MobileNumber      = 4; /// Mobile number of the person
}

/**
 * Update an existing record.
 */
message UpdateRequest {
    Record record = 1; /// The key to store the secret against.
}

/**
 * Update an existing response.
 */
message UpdateResponse {
    Record record = 1; /// The key to store the secret against.
}